--- a/TheGI4/ha1/hausaufgabe1.tex
+++ b/TheGI4/ha1/hausaufgabe1.tex
@@ -8,6 +8,10 @@
 \usepackage{xifthen}
 \usepackage[arrow, matrix, curve]{xy}
 \usepackage{semantic}
+\usepackage{paralist}
+\usepackage{ifthen}
+\usepackage{ifmtarg}
+%\usepackage{xparse}
 \newcommand{\Co}[1]{\overline{\mathit{#1}}}
 %opening
 \title{TheGI4 HA}
@@ -22,4 +26,5 @@
 \include{aufgabe4}
 \include{aufgabe5}
 \include{aufgabe6}
+\include{aufgabe7}
 \end{document}
