--- a/TheGI4/ha1/aufgabe1.tex
+++ b/TheGI4/ha1/aufgabe1.tex
@@ -47,4 +47,13 @@ $\Act = \lbrace \tau , schlechte\,Hausaufgaben\,erstellt, gute\,Hausaufgaben\,er
 	\\
 	\rbrace
 	\\ \\
- \end{math}	 	
+	 \end{math}	 
+\begin{figure}[h]
+\centering
+\includegraphics[width=15cm]{20140515_130354.jpg}
+\caption{Alternative zu Aufgabe 1 b)}
+\label{fig:B3}
+\end{figure}
+	% \begin{document}	
+%\includegraphics{20140515_130354.jpg}
+%	\end{document}
