--- a/TheGI4/ha1/aufgabe4.tex
+++ b/TheGI4/ha1/aufgabe4.tex
@@ -1,6 +1,6 @@
-\section{Aufgabe 4}
+\section*{Aufgabe 4}
 
-\subsection{Aufgabe 4.1}
+\subsection*{Aufgabe 4 a)}
 
 Zu zeigen ist $\Par{P}{Q} \bisim \Par{Q}{P}$ \\
 Sei $\mathcal{B} = Id_{\Proc} \cup \{ (\Par{A}{B},\Par{B}{A}) | A,B \in \Proc \}$ \\
@@ -167,7 +167,7 @@ In $\Par {Q}{P}$ gibt es den Übergang.
 
 Nach Definition von $\mathcal{B}$ gilt, 
 dass $(\Par{P'}{Q'},\Par{Q'}{P'}) \in \mathcal{B}$.
-\subsection{Aufgabe 4.2}
+\subsection*{Aufgabe 4 b)}
 $\Res *{\Par{a.\nil}{\Co{a}}.P}{a} \bisim \tau.P$ gilt nicht.\\
 Gegenbeispiel: $P \CCSDef a.\nil$\\
 Unter der der Bedingung, dass weder die Aktion $a$, noch ihre co-Aktion $\Co{a}$ in $P$ enthalten ist, gilt diese Bisimulation.
