--- a/TheGI4/ha1/hausaufgabe1.tex
+++ b/TheGI4/ha1/hausaufgabe1.tex
@@ -1,25 +1,29 @@
 \documentclass[a4paper,10pt]{article}
 \usepackage[utf8]{inputenc}
-\usepackage{Macros}
+
 \usepackage[ngerman]{babel}
 \usepackage{amsmath,amsfonts,amssymb}
-
+\usepackage[arrow, matrix, curve]{xy}
 \RequirePackage{etoolbox}
 \usepackage{xifthen}
-\usepackage[arrow, matrix, curve]{xy}
-\usepackage{semantic}
-\usepackage{paralist}
 \usepackage{ifthen}
 \usepackage{ifmtarg}
-%\usepackage{xparse}
+\usepackage{semantic}
+\usepackage{paralist}
+\usepackage{tikz}
+\usetikzlibrary{arrows}
+
+
 \newcommand{\Co}[1]{\overline{\mathit{#1}}}
 %opening
 \title{TheGI4 HA}
-\author{}
-
+\author{David Konopek(349333), Paul Walger(349968), Lukas Klammt(332263)}
+\usepackage{Macros}
+\usepackage{Macros}
 \begin{document}
 
 \maketitle
+
 \include{aufgabe1}
 \include{aufgabe2}
 \include{aufgabe3}
@@ -27,4 +31,5 @@
 \include{aufgabe5}
 \include{aufgabe6}
 \include{aufgabe7}
+\include{aufgabe8}
 \end{document}
