--- a/TheGI4/ha1/aufgabe5.tex
+++ b/TheGI4/ha1/aufgabe5.tex
@@ -7,15 +7,15 @@ R = \{(q_1,p_3),(q_2,p_4),(q_3,p_5),(q_4,p_1),(q_7,p_2),(q_6,p_{11}),(q_5,p_{10}
 $\\
 R ist eine starke Simulation und $(q_1, p_3) \in R$. Also wird $q_1$ von $p_3$ stark simuliert.\\\\
 \subsection*{Aufgabe 5 b)}
-$S = \{(p_3,q_1),(p_4,q_2),(p_5,q_3),(p_1,q_4),(p_2,q_7),(p_{11},q_6),(p_{10},q_5),(p_6,q_{12}),(p_7,q_{13}),(p_9,q_{11}),(p_8,q_{10})\}$\\
+$S = \{(p_3,q_1),(p_4,q_2),(p_5,q_3),(p_1,q_4),(p_2,q_7),(p_{11},q_6),(p_{10},q_5),$\\$(p_6,q_{12}),(p_7,q_{13}),(p_9,q_{11}),(p_8,q_{10}),(p_8,q_8),(p_9,q_9)\}$\\
 S ist eine starke Simulation und $(p_3, q_1) \in S$. Also wird $p_3$ von $q_1$ stark simuliert.\\\\
 \subsection*{Aufgabe 5 c)}
 Aus a) folgt, dass $q_1$ von $p_3$ stark simuliert wird und aus b) folgt, dass $p_3$ von $q_1$ stark simuliert wird. Also simulieren sich $q_1$ und $p_3$ gegenseitig stark.\\\\
 \subsection*{Aufgabe 5 d)}
 R aus a) ist eine starke Bisimulation und $(q_1, p_3) \in R$. Also sind $q_1$ und $p_3$ stark bisimilar.\\\\
 \subsection*{Aufgabe 5 e)}
-$q_12$ und $ p_6$ sind stark bisimilar.
-Sei $B = \Set {(p_6,q_{12}),(p_7,q_{13}),(p_9,q_{11}),(p_8,q_{10}),(p_9,q_9),(p_8,q_8)}$
+$q_{12}$ und $ p_6$ sind stark bisimilar.
+Sei $B = \Set{(p_6,q_{12}),(p_7,q_{13}),(p_9,q_{11}),(p_8,q_{10}),(p_9,q_9),(p_8,q_8)}$
 Es bleibt zu zeigen, dass B eine starke Bisimulation ist.\\
 
 Betrachte $(p_6, q_{12}) \in B$\\
@@ -56,5 +56,5 @@ Transitionen in $p_8$:\\
 Transitionen in $q_{18}$:\\
 -Wenn $q_{8} \CCSTrans {b} q_{11}$, dann $p_{8} \CCSTrans {b} p_{9}$ und $(p_9, q_{11}) \in B$.\\
 
-Da B eine Starke Bisimulation ist und $(p_6, q_{12}) \in B$, sind $p_6$ und $ q_12$ stark bisimilar.
+Da B eine Starke Bisimulation ist und $(p_6, q_{12}) \in B$, sind $p_6$ und $ q_{12}$ stark bisimilar.
 
