--- a/TheGI4/ha1/aufgabe8.tex
+++ b/TheGI4/ha1/aufgabe8.tex
@@ -28,8 +28,8 @@
     (2) edge node [left] {a} (3)
     (3) edge node [left] {$\Co{a}$} (4)
     (4) edge node [above] {$\tau$} (5)
-    	edge [loop left] node [above] {b} (4)
-    (5) edge [loop right] node [above] {b} (5);
+    	edge [loop left] node [left] {b} (4)
+    (5) edge [loop right] node [right] {$\Co{b}$} (5);
 \end{tikzpicture}
 
 
@@ -44,7 +44,7 @@
   \node[main node] (4) [right of=3] {A4};
   \node[main node] (5) [right of=4] {A5};
   \node[main node] (6) [right of=5] {A6};
-  \node[main node] (7) [below of=3] {A6};
+  \node[main node] (7) [below of=3] {A7};
   
   \path[every node]
     (1) edge node [left] {a} (3)
