--- a/TheGI4/ha1/hausaufgabe1.tex
+++ b/TheGI4/ha1/hausaufgabe1.tex
@@ -12,24 +12,23 @@
 \usepackage{paralist}
 \usepackage{tikz}
 \usetikzlibrary{arrows}
-
-
 \newcommand{\Co}[1]{\overline{\mathit{#1}}}
-%opening
-\title{TheGI4 HA}
-\author{David Konopek(349333), Paul Walger(349968), Lukas Klammt(332263)}
 \usepackage{Macros}
-\usepackage{Macros}
+
+\title{TheGI4 HA1}
+\author{David Konopek(349333)\\, Paul Walger(349968)\\, Lukas Klammt(332263)}
+
+
 \begin{document}
 
 \maketitle
 
 \include{aufgabe1}
-\include{aufgabe2}
-\include{aufgabe3}
-\include{aufgabe4}
-\include{aufgabe5}
-\include{aufgabe6}
-\include{aufgabe7}
-\include{aufgabe8}
+%\include{aufgabe2}
+%\include{aufgabe3}
+%\include{aufgabe4}
+%\include{aufgabe5}
+%\include{aufgabe6}
+%\include{aufgabe7}
+%\include{aufgabe8}
 \end{document}
