--- a/TheGI4/ha1/hausaufgabe1.tex
+++ b/TheGI4/ha1/hausaufgabe1.tex
@@ -24,11 +24,11 @@
 \maketitle
 
 \include{aufgabe1}
-%\include{aufgabe2}
-%\include{aufgabe3}
-%\include{aufgabe4}
-%\include{aufgabe5}
-%\include{aufgabe6}
-%\include{aufgabe7}
-%\include{aufgabe8}
+\include{aufgabe2}
+\include{aufgabe3}
+\include{aufgabe4}
+\include{aufgabe5}
+\include{aufgabe6}
+\include{aufgabe7}
+\include{aufgabe8}
 \end{document}
