--- a/TheGI4/ha2/hausaufgabe2.tex
+++ b/TheGI4/ha2/hausaufgabe2.tex
@@ -11,6 +11,7 @@
 \usepackage{semantic}
 \usepackage{paralist}
 \usepackage{tikz}
+\usepackage{stmaryrd}
 \usetikzlibrary{arrows}
 
 \title{TheGI4 HA2}
