--- a/TheGI4/ha2/aufgabe1.tex
+++ b/TheGI4/ha2/aufgabe1.tex
@@ -1,1 +1,28 @@
- 
+\section*{Aufgabe 1}
+
+\subsection*{a)}
+\begin{tikzpicture}[-,>=stealth',shorten >=1pt,auto,node distance=3cm,
+  thick,main node/.style={font=\sffamily\Large\bfseries}]
+  \node[main node] (33) {(3,3)};
+  \node[main node] (23) [below left of=33] {(2,3)};
+  \node[main node] (32) [below right of=33] {(3,2)};
+  \node[main node] (13) [below left of=23] {(1,3)};
+  \node[main node] (22) [below right of=23] {(2,2)};
+  \node[main node] (31) [below right of=32] {(3,1)};
+  \node[main node] (12) [below left of=22] {(2,2)};
+  \node[main node] (21) [below right of=22] {(2,1)};
+  \node[main node] (11) [below left of=21] {(1,1)};
+  \path[every node/.style={font=\sffamily\small}]
+    (33) edge node [] {} (23)
+         edge node [] {} (32)
+    (23) edge node [] {} (13)
+         edge node [] {} (22)
+    (32) edge node [] {} (22)
+         edge node [] {} (31)
+	(13) edge node [] {} (12)        
+    (22) edge node [] {} (12)
+         edge node [] {} (21)
+	(31) edge node [] {} (21)
+    (12) edge node [] {} (11)
+    (21) edge node [] {} (11);
+\end{tikzpicture} 
