--- a/TheGI4/ha2/aufgabe1.tex
+++ b/TheGI4/ha2/aufgabe1.tex
@@ -12,7 +12,7 @@
   \node[main node] (12) [below left of=22] {(2,2)};
   \node[main node] (21) [below right of=22] {(2,1)};
   \node[main node] (11) [below left of=21] {(1,1)};
-  \path[every node/.style={font=\sffamily\small}]
+  \path[every node]
     (33) edge node [] {} (23)
          edge node [] {} (32)
     (23) edge node [] {} (13)
