--- a/TheGI4/ha2/aufgabe4.tex
+++ b/TheGI4/ha2/aufgabe4.tex
@@ -1,1 +1,10 @@
- 
+\section*{Aufgabe 4}
+
+\subsection*{a)}
+$\emptyset$\\
+
+\subsection*{b)}
+$\Potm {\Set {0,1}} $\\
+
+\subsection*{c)}
+$\Set {Nordpol}$ 
