--- a/TheGI4/ha2/hausaufgabe2.tex
+++ b/TheGI4/ha2/hausaufgabe2.tex
@@ -15,7 +15,8 @@
 \newcommand{\Inv}[1]{#1^{-1}(\{1\})}
 \newcommand{\InvN}[1]{#1^{-1}(\{0\})}
 \usetikzlibrary{arrows}
-
+\RequirePackage{etoolbox}
+\usepackage{Macros}
 
 \title{TheGI4 HA2}
 \author{David Konopek(349333)\\, Paul Walger(349968)\\, Lukas Klammt(332263)}
