--- a/TheGI4/ha2/aufgabe5.tex
+++ b/TheGI4/ha2/aufgabe5.tex
@@ -1,1 +1,6 @@
- 
+\section*{Aufgabe 5}
+$\mathcal{F}^1$(Proc $\times$ Proc) = s(r($\Set {(P_2,P_6),(P_1,P_4),(P_1,P_5),(P_5,P_4)}$))\\
+$\mathcal{F}^2$(Proc $\times$ Proc) = s(r($\Set {(P_2,P_6),(P_1,P_5)}$))\\
+$\mathcal{F}^3$(Proc $\times$ Proc) = s(r($\Set {(P_1,P_5)}$))\\
+$\mathcal{F}^4$(Proc $\times$ Proc) = $\mathcal{F}^3$(Proc $\times$ Proc)\\\\
+Somit erhalten wir, dass $P_1$ und $P_5$ das einzige nicht trivial bisimilare Paar ist. Es gilt $P_1 \bisim P_5$
