--- a/TheGI4/ha2/aufgabe6.tex
+++ b/TheGI4/ha2/aufgabe6.tex
@@ -1,6 +1,22 @@
 \section*{Aufgabe 6}
 
 \subsection*{a)}
+Seite 108
+
+\subsection*{(b)}
+z.Z Aus $(D,\sqsubseteq)$ ein endlicher vollstänger Verband und $f$ monoton folgt dass, $z_{max} = f^M(\top)$ ein $M \in \mathbb{N}$ der größte Fixpunkt von $f$ ist.\\
+Sei $(D,\sqsubseteq)$ ein endlicher vollstänger Verband und $f$ monoton.
+z.Z $z_{max} = f^M(\top)$ ein $M \in \N$ der größte Fixpunkt von $f$.\\
+
+1. $z_{max}$ ist ein Fixpunkt von $f$.\\
+$z_{max} = f^M(\top) = f^{M+1}(\top)$ da $\top$ das maximale Element ist und $f$ monton ist.\\
+
+2. $z_{max}$ ist der größte Fixpunkt.\\
+Sei $z$ ein Fixpunkt.\\
+Nun gilt $z \sqsubseteq \top$. Da $f$ monoton ist
+$f(z) = z  \sqsubseteq f(\top)$. Wir wenden $f$ $M-1$ mal an, und wir bekommen $z  \sqsubseteq f^M(\top) = z_{max} $\\
+Daraus folgt dass $ z_{max}$ der größte Fixpunkt ist.
+
 
 
 
